testsuite/tests/parser/should_fail/readFail034.hs

module Foo where

foo# = 'a'

