testsuite/tests/parser/should_fail/readFail034.stderr

readFail034.hs:4:6: parse error on input ‛=’
